<resources>
    <string name="app_name" translatable="false">Cart</string>
    <string name="title_activity_note_list">NoteListActivity</string>
    <!-- Strings for Toast text -->
    <string name="toast_rename_success">Rename successful</string>
    <string name="toast_delete_success">%1$s deleted</string>
    <!-- Strings for Drawer greeting -->
    <string name="morning">Morning!</string>
    <string name="afternoon">Afternoon!</string>
    <string name="evening">Evening!</string>
    <!-- Strings for button text-->
    <string name="cancel">cancel</string>
    <string name="create">create</string>
    <string name="btn_rename">rename</string>
    <string name="btn_delete">delete</string>
    <string name="btn_copy">copy</string>
    <string name="btn_share">share</string>

    <!-- Strings for buttons content Description -->
    <string name="overflow_action_desc">More Actions</string>
    <string name="shared_with_desc">People collaborating over this list</string>
    <string name="button_expand_desc">Click to see more</string>
    <string name="button_add_item_image">Add item image</string>
    <string name="button_expand">View full item image</string>
    <string name="button_minimize">Minimize item image</string>
    <string name="button_prev">Previous item</string>
    <string name="button_next">Next item</string>
    <string name="fab_audio">Add Audio</string>
    <string name="fab_new_list">Create a new list</string>

    <!-- Strings used for images content Description -->
    <string name="list_item_image_desc">An Image of the list item</string>
    <string name="list_spinner_content_desc">List Title Options</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- hints for form inputs -->
    <string name="new_list">New list</string>
    <string name="rename_list">Rename list</string>
    <string name="list_item_desc_hint">Item description</string>
    <string name="list_item_title_hint">Item title</string>
    <string name="list_item_quantity">1</string>
    <string name="search_checklist_hint">Search lists</string>
    <string name="search_view_list_items">Search list items</string>
    <string name="default_quantity">1</string>
    <string name="default_price">0.00</string>
    <string name="default_currency">KES</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>

    <!-- Strings for activities metadata -->
    <string name="title_activity_items">Cart</string>
    <string name="title_activity_sub_items">SubItemsActivity</string>
    <string name="title_activity_sub_item">SubItemActivity</string>

    <!-- Application Resources -->
    <string name="preference_file_key" translatable="false">com.derrick.cart.my-pref</string>
    <string name="viewed_checklist_history" translatable="false">com.derrick.cart.viewed_list_history</string>

    <!-- Settings Preferences -->
    <string name="pref_category_display_options_title">Display options</string>
    <string name="pref_new_items_to_bottom_title">Add new items to bottom</string>
    <string name="pref_ticked_items_to_bottom_title">Move ticked items to bottom</string>
    <string name="pref_application_theme_dialog_title">Theme</string>
    <string name="pref_application_theme_title">Theme</string>
    <string name="pref_application_theme_summary">Look and feel of the user interface.</string>
    <string name="pref_category_reminders_title">Reminders</string>
    <string name="pref_location_reminders_title">Location reminders</string>
    <string name="pref_location_reminders_summary">Get a notification when you are close to a store. Requires location permission.</string>
    <string name="pref_category_prices_title">Prices</string>
    <string name="pref_enable_prices_title">Enable prices</string>
    <string name="pref_enable_prices_summary">Allow the application to fetch prices via your network.</string>
    <string name="pref_category_sharing_title">Sharing</string>
    <string name="pref_enable_sharing_title">Enable sharing</string>
    <string name="pref_enable_sharing_summary">Share checklists with your friends &amp; family.</string>
    <string-array name="pref_application_theme">
        <item>System default</item>
        <item>River rock</item>
        <item>Woody</item>
    </string-array>
    <string-array name="pref_values_application_theme">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="delete_question">Are you sure you want to delete this list?</string>
    <string name="delete_dialog_alert_title">Delete?</string>
</resources>
