<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:padding="@dimen/bottom_sheet_padding"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manageList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            style="?textTitleMuted"
            android:textAlignment="center"
            android:paddingBottom="20dp"
            android:textColor="#C9C4C4" />

        <Button
            android:id="@+id/btnRenameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_edit_alt_24dp"
            android:drawablePadding="@dimen/drawable_padding_left"
            android:text="@string/btn_rename"
            android:textColor="@color/colorSecondary"
            android:backgroundTint="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_share_24dp"
            android:drawablePadding="@dimen/drawable_padding_left"
            android:text="@string/btn_share"
            android:textColor="@color/colorSecondary"
            android:backgroundTint="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_copy_outline_24dp"
            android:drawablePadding="@dimen/drawable_padding_left"
            android:text="@string/btn_copy"
            android:textColor="@color/colorSecondary"
            android:backgroundTint="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:textAlignment="textStart"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_delete_24dp"
            android:drawablePadding="@dimen/drawable_padding_left"
            android:text="@string/btn_delete"
            android:textColor="@color/colorDanger"
            android:backgroundTint="@color/colorPrimary"
            style="?android:attr/borderlessButtonStyle"
            android:textAlignment="textStart"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>