<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/bottom_sheet_padding"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <EditText
        android:id="@+id/renameList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/rename_list"
        android:inputType="text"
        android:minHeight="@dimen/min_clickable_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRenameListCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button"
        android:text="@string/cancel"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/renameList"
        app:layout_constraintTop_toBottomOf="@+id/renameList" />

    <Button
        android:id="@+id/btnRenameListUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_button_filled"
        android:text="@string/btn_rename"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/renameList"
        app:layout_constraintTop_toBottomOf="@+id/renameList" />

</androidx.constraintlayout.widget.ConstraintLayout>
