<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/newListItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/list_item_title_hint"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:minHeight="@dimen/min_clickable_height"
        app:layout_constraintEnd_toEndOf="@+id/spinnerLists"
        app:layout_constraintStart_toStartOf="@+id/spinnerLists"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLists" />

    <EditText
        android:id="@+id/newListItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/list_item_desc_hint"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:minHeight="@dimen/min_clickable_height"
        app:layout_constraintEnd_toEndOf="@+id/spinnerLists"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerLists"
        app:layout_constraintTop_toBottomOf="@+id/newListItemTitle" />

    <Spinner
        android:id="@+id/spinnerLists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/list_spinner_content_desc"
        android:minHeight="@dimen/min_clickable_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editListItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:inputType="numberDecimal"
        android:minHeight="@dimen/min_clickable_height"
        android:text="1"
        android:hint="@string/list_item_quantity"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/spinnerLists"
        app:layout_constraintTop_toBottomOf="@+id/newListItemDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="X"
        app:layout_constraintEnd_toStartOf="@+id/editListItemPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editListItemQuantity"
        app:layout_constraintTop_toBottomOf="@+id/newListItemDescription" />

    <EditText
        android:id="@+id/editListItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:inputType="none|numberDecimal"
        android:minHeight="@dimen/min_clickable_height"
        android:text="0.00"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/listItemCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/newListItemDescription" />

    <TextView
        android:id="@+id/listItemCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="KES"
        app:layout_constraintEnd_toEndOf="@+id/spinnerLists"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editListItemPrice"
        app:layout_constraintTop_toBottomOf="@+id/newListItemDescription" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="editListItemQuantity, textView, editListItemPrice, listItemCurrency"/>


</androidx.constraintlayout.widget.ConstraintLayout>
